@@ -4,9 +4,10 @@
  */
 package blue.application;
 
+import java.awt.Desktop;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import org.openide.awt.HtmlBrowser.URLDisplayer;
 import org.openide.util.Exceptions;
@@ -17,8 +18,12 @@ public final class RequestFeatureAction implements ActionListener {
 
     public void actionPerformed(ActionEvent e) {
         try {
-            URLDisplayer.getDefault().showURL(new URL(URL_RFE));
-        } catch (MalformedURLException ex) {
+            if (Desktop.isDesktopSupported()) {
+                Desktop.getDesktop().browse(new URI(URL_RFE));
+            } else {
+                URLDisplayer.getDefault().showURL(new URL(URL_RFE));
+            }
+        } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
     }
